# opengl-firstry

./: CMakeLists.txt  README.md
Shaders/: default.frag  default.vert
src/: glad.c  main.cpp
src/EBO/: EBO.cpp  EBO.hpp
src/Shader/: Shader.cpp  Shader.hpp
src/Texture/: Texture.cpp  Texture.hpp
src/VAO/: VAO.cpp  VAO.hpp
src/VBO/: VBO.cpp  VBO.hpp
